--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <title>yuakuri</title>
+    <title>ゆあクリ！</title>
 </head>
 <body>
     <div class="background-color">
@@ -27,10 +27,9 @@
         <h3>お知らせ</h3>
         <hr>
         <p>
-            20XX/XX/XX<br>
-            サンプル<br>
-            20XX/XX/XX<br>
-            テスト<br>
+            2024/12/25<br>
+            公式Youtubeチャンネル開設！<br>
+            <a href="https://www.youtube.com/channel/UC26sVq-CHEcCyxMbZx3xTXg">ゆあクリ！公式Youtubeチャンネル</a><br>
         </p>
         <hr style="height: 1px; background-color: black;">
         <h3>掲示板</h3>
